themes/themeAba/style.css
/* ... */
sub,
sup {
	position: relative;
	font-size: 75%;
	line-height: 0;
	vertical-align: baseline;
}
sup {
	top: -0.5em;
}
sub {
	bottom: -0.25em;
}
img {
	width: auto\9;
	vertical-align: middle;
	border: 0;
	-ms-interpolation-mode: bicubic;
}
#map_canvas img,
.google-maps img {
	max-width: none;
}
button,
input,
select,
textarea {
	margin: 0;
	font-size: 100%;
	vertical-align: middle;
}
button,
input {
	*overflow: visible;
	line-height: normal;
}
button::-moz-focus-inner,
input::-moz-focus-inner {
	padding: 0;
	border: 0;
}
button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
	-webkit-appearance: button;
	cursor: pointer;
}
button,
input[type="button"],
input[type="reset"],
input[type="submit"],
input[type="radio"],
input[type="checkbox"],
label,
select {
	cursor: pointer;
}
input[type="search"] {
	-webkit-appearance: textfield;
}
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
	-webkit-appearance: none;
}
textarea {
	overflow: auto;
	vertical-align: top;
}
@media print {
	* {
		text-shadow: none !important;
		color: #000 !important;
		background: 0 0 !important;
		box-shadow: none !important;
	}
	a,
	a:visited {
		text-decoration: underline;
	}
	a[href]:after {
		content: " (" attr(href) ")";
	}
	abbr[title]:after {
		content: " (" attr(title) ")";
	}
	.ir a:after,
	a[href^="javascript:"]:after,
	a[href^="#"]:after {
		content: "";
	}
	blockquote,
	pre {
		border: 1px solid #999;
		page-break-inside: avoid;
	}
	thead {
		display: table-header-group;
	}
	img,
	tr {
		page-break-inside: avoid;
	}
	img {
		max-width: 100% !important;
	}
	h2,
	h3,
	p {
		orphans: 3;
		widows: 3;
	}
	h2,
	h3 {
		page-break-after: avoid;
	}
}
body {
	margin: 0;
	padding: 0;
	color: #333;
	background-color: #f4f4f4;
	font-family: "Open Sans", sans-serif;
	font-weight: 300;
	line-height: 32px;
	font-size: 16px;
}
.box {
	width: 1290px;
	margin: 0 auto;
	position: relative;
}
.clearfix {
	height: 0;
	line-height: 0;
	font-size: 0;
	clear: both;
}
html[xmlns] .clearfix {
	display: block;
}
* html .clearfix {
	height: 1%;
}
body a {
	color: #679938;
	text-decoration: none;
	-webkit-transition: all 0.3s ease-in-out;
	-moz-transition: all 0.3s ease-in-out;
	-o-transition: all 0.3s ease-in-out;
	transition: all 0.3s ease-in-out;
}
a,
a:active,
a:focus,
a:hover {
	outline: 0;
}
a:hover {
	color: #416124;
}
img {
	max-width: 100%;
	height: auto !important;
}
*,
:after,
:before {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}
.article h1,
.blog h1,
h1 {
	font-size: 32px;
	line-height: 44px;
	padding: 0 0 20px;
	margin: 0;
	text-align: center;
	font-weight: 400;
	color: #679938;
}
h2 {
	color: #679938;
	font-size: 40px;
	font-weight: 300;
	margin: 0;
	padding: 0 0 40px;
}
h3 {
	color: #679938;
	font-size: 30px;
	font-weight: 300;
	margin: 0;
	padding: 0 0 40px;
}
h4.subTitle {
	text-transform: uppercase;
	font-size: 12px;
	color: #777;
	font-weight: 700;
	text-align: center;
	margin: 0;
	padding: 0;
}
h5 {
	font-size: 18px;
	font-weight: 600;
	padding: 0 0 20px;
}
p {
	padding: 0 0 30px;
	margin: 0;
}
input {
	border: none;
	padding: 10px !important;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
	-moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
	width: 80%;
	height: auto;
}
input.button,
button.button {
	background-color: #50d0bf;
	border: none;
	text-transform: uppercase;
	color: #fff;
	font-weight: 400;
	padding: 20px 40px;
	-webkit-border-radius: 30px;
	-moz-border-radius: 30px;
	border-radius: 30px;
	margin: 0 auto;
	display: inline-block;
	width: auto;
}
select:not(.ui-datepicker-month, .ui-datepicker-year),
textarea {
	border: none;
	padding: 10px !important;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
	-moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
	width: 100%;
	height: auto;
}
img.right {
	float: right;
	padding: 0 0 0 40px;
}
img.left {
	float: left;
	padding: 0 40px 0 0;
}
.btn {
	padding: 15px 30px;
	border: 1px solid #679938;
	color: #679938;
	font-size: 16px;
	-webkit-border-radius: 60px;
	-moz-border-radius: 60px;
	border-radius: 60px;
	display: inline-block;
	text-decoration: none;
}
.btn:hover {
	background-color: #679938;
	color: #fff;
}
header {
	background-color: #679938;
	margin: 0;
	padding: 0;
	z-index: 10;
	position: relative;
	overflow: visible;
	-webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
	-moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
	box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
}
header ul {
	margin: 0;
	padding: 0;
	display: inline-block;
}
header ul li {
	list-style: none;
	display: inline-block;
}
header a {
	color: #fff;
}
header .box {
	text-align: right;
}
header .logo {
	background: url(img/aba_rent_a_car.png) no-repeat;
	background-size: 144px auto;
	width: 145px;
	height: 145px;
	position: absolute;
	top: -10px;
	left: -10px;
	z-index: 20;
}
header #menu #menuResp {
	display: inline-block;
	padding: 0;
	margin: 0;
}
header #menu #menuResp ul {
	padding: 0;
	margin: 0;
}
header #menu #menuResp ul li {
	margin: 0;
	padding: 0;
	position: relative;
}
header #menu #menuResp ul li a {
	padding: 14px 12px !important;
	text-transform: uppercase;
	font-size: 14px;
	font-weight: 300;
	color: #fcfcfc;
	line-height: 20px !important;
	display: inline-block;
	border-bottom: 4px solid #679938;
}
header #menu #menuResp ul li a:hover {
	color: #416124;
	border-bottom: 4px solid #80bc48;
}
header #menu #menuResp ul li.current-menu-item a,
header #menu #menuResp ul li.current_page_item a {
	border-bottom: 4px solid #80bc48;
}
header #menu #menuResp ul li:hover > a {
	color: #416124;
	border-bottom: 4px solid #80bc48;
}
header #menu #menuResp ul li:hover > ul {
	display: block;
	top: 0;
	padding: 110px 0 0;
}
/* ... */

